--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
+    "@aws-sdk/s3-presigned-post": "^3.932.0",
+    "@aws-sdk/s3-request-presigner": "^3.932.0",
     "@mantine/core": "^8.3.1",
     "@mantine/hooks": "^8.3.1",
     "framer-motion": "^12.23.14",
+    "mime": "^4.1.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
