--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@aws-sdk/s3-request-presigner": "^3.932.0",
     "@mantine/core": "^8.3.1",
     "@mantine/hooks": "^8.3.1",
+    "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.14",
     "mime": "^4.1.0",
     "next": "15.5.2",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -25,8 +27,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
